--- a/index.html
+++ b/index.html
@@ -6,6 +6,65 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <div>
+            <p>START CSS</p>
+        </div>
+        <div>
+            <ul>
+                <li>PORTFOLIO</li>
+                <li>ABOUT</li>
+                <li>CONTACT</li>
+            </ul>
+        </div>
+    </header>
+    <section>
+        <div>
+            <img src="./img/avataaars.svg" alt="">
+        </div>
+        <div><h1>START CSS</h1></div>
+        <div><p>Graphic Artist - Web Designer - Illustrator</p></div>
+    </section>
+    <section>
+        <div><h2>PORTFOLIO</h2></div>
+        <div>
+            <div><img src="./img/portfolio/cabin.png" alt=""></div>
+            <div><img src="./img/portfolio/cake.png" alt=""></div>
+            <div><img src="./img/portfolio/circus.png" alt=""></div>
+            <div><img src="./img/portfolio/game.png" alt=""></div>
+            <div><img src="./img/portfolio/safe.png" alt=""></div>
+            <div><img src="./img/portfolio/submarine.png" alt=""></div>
+        </div>
+    </section>
+    <section>
+        <div><h1>ABOUT</h1></div>
+        <div>
+            <div>
+                <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The downloads includes the complete sources files, including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
+            </div>
+            <div>
+                <p>You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email adress to the contact form to make it fully functional.</p>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div>
+            <h1>CONTACT ME</h1>
+        </div>
+        <div>
+            <form action="">
+                <label for="">Name</label>
+                <input type="text">
+                <label for="">Email Adress</label>
+                <input type="text">
+                <label for="">Phone Number</label>
+                <input type="text">
+                <label for="">Message</label>
+                <input type="text">
+            </form>
+            <div><button>Send</button></div>
+        </div>
+    </section>
+    <footer></footer>
 </body>
 </html>
