--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./style/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
@@ -65,6 +66,38 @@
             <div><button>Send</button></div>
         </div>
     </section>
-    <footer></footer>
+    <footer>
+        <div>
+            <div>
+                <h4>LOCATION</h4>
+                <p>2215 John Daniel Drive</p><br>
+                <p>Clark, MO 65243</p>
+            </div>
+            <div>
+                <h4>AROUND THE WEB</h4>
+                <div>
+                    <div>
+                        <i class="fa-brands fa-facebook"></i>
+                    </div>
+                    <div>
+                        <i class="fa-brands fa-square-twitter"></i>
+                    </div>
+                    <div>
+                        <i class="fa-brands fa-linkedin"></i>
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-basketball"></i>
+                    </div>    
+                </div>
+            </div>
+            <div>
+                <h4>ABOUT FREELANCER</h4>
+                <p>Freelance is a free to use, MIT licensed Bootstrap theme created by <span>Start Bootstrap</span>.</p>
+            </div>
+        </div>
+        <div>
+            <p>Copyright &#169 Your Website 2020</p>
+        </div>
+    </footer>
 </body>
 </html>
