css head+section1

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/6f38fb42dd.js" crossorigin="anonymous"></script>
     <title>Document</title>
+
 </head>
 <body>
     <header>
@@ -20,7 +21,7 @@
             </ul>
         </div>
     </header>
-    <section>
+    <section id="section1">
         <div>
             <img src="./img/avataaars.svg" alt="">
         </div>
