cssSection2txt+img

--- a/index.html
+++ b/index.html
@@ -28,15 +28,17 @@
         <div><h1>START CSS</h1></div>
         <div><p>Graphic Artist - Web Designer - Illustrator</p></div>
     </section>
-    <section>
+    <section id="section2">
         <div><h2>PORTFOLIO</h2></div>
         <div>
-            <div><img src="./img/portfolio/cabin.png" alt=""></div>
-            <div><img src="./img/portfolio/cake.png" alt=""></div>
-            <div><img src="./img/portfolio/circus.png" alt=""></div>
-            <div><img src="./img/portfolio/game.png" alt=""></div>
-            <div><img src="./img/portfolio/safe.png" alt=""></div>
-            <div><img src="./img/portfolio/submarine.png" alt=""></div>
+            <div id="section2img">
+                <div><img src="./img/portfolio/cabin.png" alt=""></div>
+                <div><img src="./img/portfolio/cake.png" alt=""></div>
+                <div><img src="./img/portfolio/circus.png" alt=""></div>
+                <div><img src="./img/portfolio/game.png" alt=""></div>
+                <div><img src="./img/portfolio/safe.png" alt=""></div>
+                <div><img src="./img/portfolio/submarine.png" alt=""></div>
+            </div>    
         </div>
     </section>
     <section>
