--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
         <div>
             <div>
                 <h4>LOCATION</h4>
-                <p>2215 John Daniel Drive</p><br>
-                <p>Clark, MO 65243</p>
+                <p>2215 John Daniel Drive<br>Clark, MO 65243</p>
             </div>
             <div>
                 <h4>AROUND THE WEB</h4>
@@ -96,7 +95,8 @@
             </div>
             <div>
                 <h4>ABOUT FREELANCER</h4>
-                <p>Freelance is a free to use, MIT licensed Bootstrap theme created by <span>Start Bootstrap</span>.</p>
+                <p>Freelance is a free to use,<br> MIT licensed Bootstrap theme created by <span>Start Bootstrap</span>.</p>
+                <!-- <p> MIT licensed Bootstrap theme created by <span>Start Bootstrap</span>.</p> -->
             </div>
         </div>
         <div>
