--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./style/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/6f38fb42dd.js" crossorigin="anonymous"></script>
     <title>Document</title>
-
+    <script src="https://kit.fontawesome.com/6f38fb42dd.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -95,7 +94,7 @@
             </div>
             <div>
                 <h4>ABOUT FREELANCER</h4>
-                <p>Freelance is a free to use,<br> MIT licensed Bootstrap theme created by <span>Start Bootstrap</span>.</p>
+                <p>Freelance is a free to use, MIT<br>licensed Bootstrap theme created by <br><span>Start Bootstrap</span>.</p>
                 <!-- <p> MIT licensed Bootstrap theme created by <span>Start Bootstrap</span>.</p> -->
             </div>
         </div>
