--- a/index.html
+++ b/index.html
@@ -79,17 +79,13 @@
                 <h4>AROUND THE WEB</h4>
                 <div>
                     <div>
-                        <i class="fa-brands fa-facebook"></i>
-                    </div>
+                        <i class="fa-brands fa-facebook-f"></i>                    </div>
                     <div>
-                        <i class="fa-brands fa-square-twitter"></i>
-                    </div>
+                        <i class="fa-brands fa-twitter"></i>                    </div>
                     <div>
-                        <i class="fa-brands fa-linkedin"></i>
-                    </div>
+                        <i class="fa-brands fa-linkedin-in"></i>                    </div>
                     <div>
-                        <i class="fa-solid fa-basketball"></i>
-                    </div>    
+                        <i class="fa-brands fa-dribbble"></i>                    </div>    
                 </div>
             </div>
             <div>
