--- a/index.html
+++ b/index.html
@@ -57,14 +57,22 @@
         </div>
         <div>
             <form action="">
-                <label for="">Name</label>
-                <input type="text">
-                <label for="">Email Adress</label>
-                <input type="text">
-                <label for="">Phone Number</label>
-                <input type="text">
-                <label for="">Message</label>
-                <input type="text">
+                <div>
+                    <label for="">Name</label>
+                    <input type="text">    
+                </div>
+                <div>
+                    <label for="">Email Adress</label>
+                    <input type="text">
+                </div>
+                <div>
+                    <label for="">Phone Number</label>
+                    <input type="text">
+                </div>
+                <div>
+                    <label for="">Message</label>
+                    <input type="text">    
+                </div>
             </form>
             <div><button>Send</button></div>
         </div>
