--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
                 <div>
                     <label for="">Message</label>
-                    <input type="text">    
+                    <input type="text" id="text">    
                 </div>
             </form>
             <div><button>Send</button></div>
